--- a/csrc/Makefile
+++ b/csrc/Makefile
@@ -1,11 +1,5 @@
-CFLAGS=-m32 -g
+CFLAGS=-m32 -g -Wall
+MKFOBJ=mkf.o mkf_decompress.o
 
-mkf_asm.o: mkf_asm.asm
-	nasm -f elf32 mkf_asm.asm
-
-mkf_asm_data.o: mkf_asm_data.c
-
-mkf.o: mkf.c
-
-libmkf.a: mkf.o mkf_asm.o mkf_asm_data.o
-	ar r libmkf.a mkf.o mkf_asm.o mkf_asm_data.o
+libmkf.a: $(MKFOBJ)
+	ar r libmkf.a $(MKFOBJ)
