replace get_local_time function

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -1,11 +1,17 @@
 CROSS=i686-w64-mingw32-
+CC=$(CROSS)gcc
 LD=$(CROSS)ld
 LDFLAGS=-e fcn_0045709c
 LIBS=-lgdi32 -luser32 -lkernel32 -lwinmm -ldsound -lddraw
 LIBS+=-lmsvcrt
 
-%.exe: %.obj
-	$(LD) -o $@ $< $(LDFLAGS) $(LIBS)
+OBJS = rich4.obj rich4_time.obj
+
+rich4.exe: $(OBJS)
+	$(LD) -o $@ $(OBJS) $(LDFLAGS) $(LIBS)
 
 %.obj: %.asm
 	nasm -f win32 $<
+
+%.obj: %.c
+	$(CC) $(CFLAGS) -c -o $@ $<
