player info in C

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -6,6 +6,7 @@ LIBS=-lgdi32 -luser32 -lkernel32 -lwinmm -ldsound -lddraw
 LIBS+=-lmsvcrt
 
 OBJS = rich4.obj rich4_time.obj card_strings.obj stocks_data.obj card_table.obj tool_strings.obj \
+       players.obj \
        rich4_clib.obj
 
 rich4.exe: $(OBJS)
