--- a/asm/Makefile
+++ b/asm/Makefile
@@ -6,7 +6,7 @@ LIBS=-lgdi32 -luser32 -lkernel32 -lwinmm -ldsound -lddraw
 LIBS+=-lmsvcrt
 
 OBJS = entry.obj \
-       rich4.obj rich4_time.obj card_strings.obj stocks_data.obj card_table.obj tool_strings.obj \
+       rich4.obj rich4_time.obj card_strings.obj stocks_data.obj card_table.obj tool_strings.obj tool_table.obj \
        players.obj \
        window_util.obj \
        rich4_crt_mthread.obj rich4_clib.obj
