use the asm code from rich4_asm project
And use the orignal C files to replace the assembly in
rich4_asm project.

Put global_rich4_cfg in rich4.asm as in rich4_asm, otherwise
players will not be able to sell stocks.

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -1,19 +1,15 @@
 CROSS=i686-w64-mingw32-
 CC=$(CROSS)gcc
-LD=$(CROSS)ld
-LDFLAGS=-e entry
-LIBS=-lgdi32 -luser32 -lkernel32 -lwinmm -ldsound -lddraw
-LIBS+=-lmsvcrt
+LD=$(CROSS)gcc
+LDFLAGS=
+LIBS=-lgdi32 -luser32 -lkernel32 -lwinmm -ldsound -lddraw -lmsvcrt
 
-OBJS = entry.obj \
-       rich4.obj rich4_time.obj card_strings.obj stocks_data.obj card_table.obj tool_strings.obj tool_table.obj \
-       rich4_config.obj \
-       players.obj \
-       window_util.obj \
-       rich4_crt_mthread.obj rich4_clib.obj
+OBJS = rich4.obj rich4_card_strings.obj rich4_tool_strings.obj rich4_stocks.obj \
+       rich4_config_file.obj rich4_card_table.obj rich4_tool_table.obj \
+       rich4_getdate.obj
 
-rich4.exe: $(OBJS)
-	$(LD) -o $@ $(OBJS) $(LDFLAGS) $(LIBS)
+rich4_mscrt.exe: $(OBJS) libc_stub387.obj mscrt.ld
+	$(LD) -o $@ $+ $(LDFLAGS) $(LIBS)
 
 %.obj: %.asm
 	nasm -f win32 $<
@@ -24,4 +20,4 @@ rich4.exe: $(OBJS)
 .PHONY: clean
 
 clean:
-	rm -f rich4.exe $(OBJS)
+	rm -f $(wildcard *.exe) $(wildcard *.obj)
